--- a/package.json
+++ b/package.json
@@ -1,47 +1,66 @@
 {
-  "name": "pt-pms",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~8.1.2",
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/forms": "~8.1.2",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.2",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler-cli": "~8.1.2",
-    "@angular/language-service": "~8.1.2",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
-  }
+    "name": "track-hub",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~8.1.2",
+        "@angular/cdk": "~8.2.1",
+        "@angular/common": "~8.1.2",
+        "@angular/compiler": "~8.1.2",
+        "@angular/core": "~8.1.2",
+        "@angular/forms": "~8.1.2",
+        "@angular/material": "^8.2.1",
+        "@angular/platform-browser": "~8.1.2",
+        "@angular/platform-browser-dynamic": "~8.1.2",
+        "@angular/router": "~8.1.2",
+        "@fortawesome/angular-fontawesome": "^0.5.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.25",
+        "@fortawesome/free-solid-svg-icons": "^5.11.2",
+        "@types/gsap": "^1.20.2",
+        "@webacad/ng-mat-file-upload": "^2.1.0",
+        "@webacad/observable-file-reader": "^0.2.0",
+        "angular-bootstrap-md": "^8.3.1",
+        "angular-font-awesome": "^3.1.2",
+        "angular-pipes": "^10.0.0",
+        "angular-ts-math": "^1.0.7",
+        "bcryptjs": "^2.4.3",
+        "bootstrap": "^4.3.1",
+        "font-awesome": "^4.7.0",
+        "gsap": "^2.1.3",
+        "hammerjs": "^2.0.8",
+        "jw-angular-pagination": "^1.1.0",
+        "rxjs": "~6.4.0",
+        "tslib": "^1.9.0",
+        "zone.js": "~0.9.1"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.801.2",
+        "@angular/cli": "~8.1.2",
+        "@angular/compiler-cli": "~8.1.2",
+        "@angular/language-service": "~8.1.2",
+        "@fortawesome/fontawesome-free": "^5.11.2",
+        "@types/jasmine": "~3.3.8",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
+        "codelyzer": "^5.0.0",
+        "jasmine-core": "~3.4.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.1.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.1",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.0",
+        "protractor": "~5.4.0",
+        "ts-node": "~7.0.0",
+        "tslint": "~5.15.0",
+        "typescript": "~3.4.3"
+    }
 }
